chore(core,codegen): clear IntelliJ warnings — getFirst, method refs, redundant suppression
Five small cleanups driven by IntelliJ inspection results post-Phase-E:

1. `Reflective#resolveHolderConstructor` — collapse the `if (maybeHolder.isEmpty()) return null;`
   guard + `.get().constructor()` into a single `Optional.map(...).orElse(null)` expression.
2. `FocusProcessor#emitRecordConstantsMap` — drop unused `recordName` parameter; replace
   `components.get(0)` with `components.getFirst()` (Java 21+ idiom).
3. `AbstractTelescopeProcessor#emitBeanConstantsMap` — replace `props.get(0)` with
   `props.getFirst()`.
4. `Beans#getter` — `source -> reader.apply(source)` becomes `reader::apply` (method reference).
5. `Iso#liftOptional` — drop redundant `OptionalUsedAsFieldOrParameterType` suppression; the
   `OptionalAssignedToNull` suppression is the only one that actually fires.

The remaining IntelliJ flags are intentional and documented:
- `{@link Class#forName}` "Symbol inaccessible" errors — IntelliJ JPMS confusion; javadoc
  compiles cleanly.
- Unused type-inference parameters on `Telescope.of` / `Telescope.ofBean` / `From.to` etc. —
  drive `<S>` / `<B>` inference at call sites.
- Phantom type parameters on `Mapping<A,B>` / `Kind<F,A>` / `EitherK<L>` / `ValidatedK<E>` —
  load-bearing for the sealed-permit and HKT-emulation patterns.
- Unused public-API surface on `Validated` / `Mapper#asTelescope` — exposed for consumers.
- Duplicated `Iso.liftList` / `liftSet` fragments — different `Collector` instances per shape.